TFP-2394 mottatt dato på oppgitt periode